# slp-di-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/slp_di_analyzer/: __main__.py  custom.css  file_handler.py  gui.py  icon.py  karinemachine.xml  requirements.txt  ui_design.py  ui_design.ui
src/slp_di_analyzer/slp_di_characters/: bowser.py  captain_falcon.py  donkey_kong.py  dr_mario.py  falco.py  fox.py  ganondorf.py  ice_climbers.py  jigglypuff.py  kirby.py  link.py  luigi.py  mario.py  marth.py  mewtwo.py  mr_game_and_watch.py  ness.py  peach.py  pichu.py  pikachu.py  roy.py  samus.py  sheik.py  yoshi.py  young_link.py  zelda.py
tests/: test_slp_di_analyzer.py
